cf_analysis_results/checkerframework_results/url2114d537a2_ForNeVeR_lanterna_tgz-pJ8-com_googlecode_lanterna_test_gui_DifferentKindsOfListBoxesTestJ8.txt
../../../../datasets/june2020_dataset/url2114d537a2_ForNeVeR_lanterna_tgz-pJ8-com_googlecode_lanterna_test_gui_DifferentKindsOfListBoxesTestJ8/src/com/googlecode/lanterna/test/TestShellCommand.java:34: error: (required.method.not.called) $$ 4 $$ method close $$ stdout $$ java.io.InputStream $$ possible exceptional exit due to stdout.read() with exception type java.io.IOException $$ ( 1135, 1181 ) $$ @MustCall method close may not have been invoked on stdout or any of its aliases.
        InputStream stdout = process.getInputStream();
                    ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to stdout.read() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url2114d537a2_ForNeVeR_lanterna_tgz-pJ8-com_googlecode_lanterna_test_gui_DifferentKindsOfListBoxesTestJ8/src/com/googlecode/lanterna/terminal/text/UnixTerminal.java:161: error: (required.method.not.called) $$ 4 $$ method close $$ stdout $$ java.io.InputStream $$ possible exceptional exit due to stdout.read() with exception type java.io.IOException $$ ( 5256, 5302 ) $$ @MustCall method close may not have been invoked on stdout or any of its aliases.
            InputStream stdout = process.getInputStream();
                        ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to stdout.read() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url2114d537a2_ForNeVeR_lanterna_tgz-pJ8-com_googlecode_lanterna_test_gui_DifferentKindsOfListBoxesTestJ8/src/com/googlecode/lanterna/terminal/text/CygwinTerminal.java:160: error: (required.method.not.called) $$ 4 $$ method close $$ stdout $$ java.io.InputStream $$ possible exceptional exit due to stdout.read() with exception type java.io.IOException $$ ( 5358, 5404 ) $$ @MustCall method close may not have been invoked on stdout or any of its aliases.
            InputStream stdout = process.getInputStream();
                        ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to stdout.read() with exception type java.io.IOException
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors
